<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_hjemskjerm"
        android:icon="@drawable/ikon_hjem"
        android:title="@string/nav_hjem" />

    <item
        android:id="@+id/nav_kategorier"
        android:icon="@drawable/kategori_meny"
        android:title="@string/kategorier" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/search_dark"
        android:title="@string/nav_search" />

    <item
        android:id="@+id/nav_filter"
        android:icon="@drawable/ikon_filter"
        android:title="@string/nav_filter" />

    <item
        android:id="@+id/nav_profil"
        android:icon="@drawable/profil"
        android:title="@string/nav_profil" />
</menu>